--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -1,7 +1,4 @@
-@color-primary: #70d7f6;
+//@color-primary: #70d7f6;
 
 
-@font-family-main: 'Calibri', 'Arial', sans-serif;
-
-
-@header-height: 75px;
+//@font-family-main: 'Calibri', 'Arial', sans-serif;
