--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -2,19 +2,19 @@
 @import 'variables.less';
 @import 'mixins.less';
 
+@import 'plugins/slick.less';
+@import 'plugins/jquery.fancybox.less';
 
 @import 'global/global-fonts.less';
 @import 'global/global-scaffolding.less';
 @import 'global/global-type.less';
 
-//@import 'blocks/btn.less';
-//@import 'blocks/header.less';
-//@import 'blocks/logo.less';
-//@import 'blocks/promo.less';
-//@import 'blocks/creator.less';
-//@import 'blocks/demo.less';
-//@import 'blocks/features.less';
-//@import 'blocks/footer.less';
-//@import 'blocks/input-text.less';
-//@import 'blocks/soshace-logo.less';
-//@import 'blocks/start-work.less';
+@import 'blocks/btn.less';
+@import 'blocks/logo.less';
+@import 'blocks/menu.less';
+@import 'blocks/phone.less';
+@import 'blocks/slider-main.less';
+@import 'blocks/socials.less';
+@import 'blocks/title.less';
+@import 'blocks/header.less';
+@import 'blocks/footer.less';
