--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -1,4 +1,14 @@
-//@color-primary: #70d7f6;
+@color-main: #c32417;
 
 
-//@font-family-main: 'Calibri', 'Arial', sans-serif;
+@font-family-main: 'Roboto', 'Arial', sans-serif;
+
+
+@transition: all .2s linear;
+
+
+
+@screen-xs:                   479px;
+@screen-sm:                   767px;
+@screen-md:                   991px;
+@screen-lg:                   1199px;
