--- a/src/templates/head.jade
+++ b/src/templates/head.jade
@@ -2,8 +2,11 @@ head
   meta(charset="UTF-8")
   meta(http-equiv="X-UA-Compatible", content="IE=Edge")
   title Title
+  link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Roboto:100,400&subset=cyrillic')
   link(rel='stylesheet', href='css/style.css')
   script(type="text/javascript", src="js/jquery.min.js")
+  script(type="text/javascript", src="js/slick.min.js")
+  script(type="text/javascript", src="js/jquery.fancybox.pack.js")
   script(type="text/javascript", src="js/script.js")
   meta(name="viewport", content="width=device-width, initial-scale=1, user-scalable=0")
   meta(name="format-detection", content="telephone=no")
