--- a/src/pages/index.jade
+++ b/src/pages/index.jade
@@ -13,5 +13,6 @@ html(lang='en')
       .title
         h1.title__content Студия пилатес
         p.title__comment и функционального тренинга
-        a.btn.title__btn(href="#") Гостевой визит
+        a.btn.title__btn(href="#") 
+          .btn__content Гостевой визит
       include ../templates/footer.jade
