--- a/src/styles/blocks/slider-main.less
+++ b/src/styles/blocks/slider-main.less
@@ -14,8 +14,8 @@
     }
     
     &--first {
-//      background: url(http://placehold.it/1920x1080/000000) no-repeat center;
-      background: url(../img/main-bg-1.jpg) no-repeat center;
+      background: url(http://placehold.it/1920x1080/000000) no-repeat center;
+//      background: url(../img/main-bg-1.jpg) no-repeat center;
       background-size: cover;
     
       @media screen and (max-width: @screen-md) {
@@ -30,8 +30,8 @@
     }
     
     &--second {
-//      background: url(http://placehold.it/1919x1079/000000) no-repeat center;
-      background: url(../img/main-bg-2.jpg) no-repeat center;
+      background: url(http://placehold.it/1919x1079/000000) no-repeat center;
+//      background: url(../img/main-bg-2.jpg) no-repeat center;
       background-size: cover;
     
       @media screen and (max-width: @screen-md) {
@@ -46,8 +46,8 @@
     }
     
     &--third {
-//      background: url(http://placehold.it/1921x1081/000000) no-repeat center;
-      background: url(../img/main-bg-3.jpg) no-repeat center;
+      background: url(http://placehold.it/1921x1081/000000) no-repeat center;
+//      background: url(../img/main-bg-3.jpg) no-repeat center;
       background-size: cover;
     
       @media screen and (max-width: @screen-md) {
@@ -61,12 +61,4 @@
       }
     }
   }
-}
-
-.slick-list {
-  height: 100%;
-}
-
-.slick-track {
-  height: 100%;
 }
