--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -4,6 +4,7 @@
 
 @import 'plugins/slick.less';
 @import 'plugins/jquery.fancybox.less';
+@import 'plugins/plugins-overwrite.less';
 
 @import 'global/global-fonts.less';
 @import 'global/global-scaffolding.less';
