--- a/src/templates/mixins.jade
+++ b/src/templates/mixins.jade
@@ -1,5 +1,5 @@
-mixin socials
-  ul.socials
+mixin socials(newClass)
+  ul.socials(class=newClass)
     li.socials__item
       a.socials__item-link.socials__item-link--vk(href="#")
     li.socials__item
