--- a/src/styles/blocks/btn.less
+++ b/src/styles/blocks/btn.less
@@ -3,9 +3,41 @@
   padding: 10.5px 30px;
   border: 2px solid #fff;
   border-radius: 4px;
-  color: #fff;
-  font-family: @font-family-main;
-  font-size: 18px;
-  text-transform: uppercase;
   text-decoration: none;
+  position: relative;
+  
+  &__content {
+    color: #fff;
+    font-family: @font-family-main;
+    font-size: 18px;
+    text-transform: uppercase;
+    position: relative;
+    z-index: 2;
+    font-weight: 500;
+  }
+  
+  &:after {
+    content: '';
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 0;
+    transition: @transition;
+    background: @color-main;
+    z-index: 1;
+  }
+  
+  &:hover {
+    border-color: @color-main;
+    
+    .btn__content {
+      color: #000;
+    }
+    
+    &:after {
+      height: 100%;
+    }
+  }
 }
