--- a/src/templates/header.jade
+++ b/src/templates/header.jade
@@ -4,16 +4,21 @@ header.header
     img.logo__img(src="img/logo.png")
   nav.menu
     a.menu__button(href="#menu")
-    ul.menu__content#menu
-      li.menu__item
-        a(href="#").menu__item-link Главная
-      li.menu__item
-        a(href="#").menu__item-link Программы
-      li.menu__item
-        a(href="#").menu__item-link Тренеры
-      li.menu__item
-        a(href="#").menu__item-link Расписание
-      li.menu__item
-        a(href="#").menu__item-link Галерея
-      li.menu__item
-        a(href="#").menu__item-link Контакты
+    .menu__wrapper#menu
+      ul.menu__content
+        li.menu__item
+          a(href="#").menu__item-link Главная
+        li.menu__item
+          a(href="#").menu__item-link Программы
+        li.menu__item
+          a(href="#").menu__item-link Тренеры
+        li.menu__item
+          a(href="#").menu__item-link Расписание
+        li.menu__item
+          a(href="#").menu__item-link Галерея
+        li.menu__item
+          a(href="#").menu__item-link Контакты
+      .menu__content-mobile
+        +socials('socials--modal')
+        .phone.phone--modal +7 901 111-11-11
+      
