--- a/src/pages/index.jade
+++ b/src/pages/index.jade
@@ -9,10 +9,10 @@ html(lang='en')
       .slider-main__item.slider-main__item--second
       .slider-main__item.slider-main__item--third
     .wrapper
-      include ../templates/header.jade
+      +header
       .title
         h1.title__content Студия пилатес
         p.title__comment и функционального тренинга
         a.btn.title__btn(href="#") 
           .btn__content Гостевой визит
-      include ../templates/footer.jade
+      +footer
