--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -17,5 +17,9 @@
 @import 'blocks/slider-main.less';
 @import 'blocks/socials.less';
 @import 'blocks/title.less';
+@import 'blocks/course.less';
 @import 'blocks/header.less';
 @import 'blocks/footer.less';
+@import 'blocks/divided-page.less';
+@import 'blocks/content.less';
+@import 'blocks/page-half.less';
