--- a/src/styles/blocks/header.less
+++ b/src/styles/blocks/header.less
@@ -3,4 +3,10 @@
   justify-content: space-between;
   align-items: center;
   position: relative;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  padding: 20px 15px;
+  z-index: 5;
 }
