--- a/src/styles/blocks/logo.less
+++ b/src/styles/blocks/logo.less
@@ -1,5 +1,6 @@
 .logo {
   text-decoration: none;
+  
   &__name {
     color: #fff;
     font-family: @font-family-main;
@@ -7,5 +8,12 @@
     font-weight: 100;
     text-transform: uppercase;
     text-align: right;
+  }
+  
+  &__img {
+    background: url(../img/logo.png) no-repeat;
+    background-size: cover;
+    width: 136px;
+    height: 34px;
   }
 }
