--- a/src/styles/blocks/menu.less
+++ b/src/styles/blocks/menu.less
@@ -78,14 +78,29 @@
       }
     }
   }
-}
+  
+  &__content-mobile {
+    display: none;
+    text-align: center;
+    margin-top: 50px;
 
-.menu__content-mobile {
-  display: none;
-  text-align: center;
-  margin-top: 50px;
+    @media screen and (max-width: @screen-md) {
+      display: block;
+    }
+  }
+  
+  &--black {
+    width: 50%;
+    justify-content: center;
     
-  @media screen and (max-width: @screen-md) {
-    display: block;
+    .menu__content {
+      justify-content: flex-start;
+      padding-left: 20px;
+    }
+//    position: fixed;
+    
+    .menu__item-link {
+      color: #000;
+    }
   }
 }
