add pilates page desktop

--- a/src/styles/blocks/menu.less
+++ b/src/styles/blocks/menu.less
@@ -1,4 +1,8 @@
 .menu {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  padding-right: 15px;
   
   &__wrapper {
     
@@ -91,7 +95,7 @@
   
   &--black {
     width: 50%;
-    justify-content: center;
+    background: #fff;
     
     .menu__content {
       justify-content: flex-start;
