--- a/src/styles/blocks/socials.less
+++ b/src/styles/blocks/socials.less
@@ -27,6 +27,21 @@
       }
     }
   }
+  
+  &--black {
+    .socials__item-link--vk {
+      background: url(../img/social-icon-vk--black.png) no-repeat;
+      background-size: cover;
+    }
+    .socials__item-link--instagram {
+      background: url(../img/social-icon-instagram--black.png) no-repeat;
+      background-size: cover;
+    }
+    .socials__item-link--fb {
+      background: url(../img/social-icon-fb--black.png) no-repeat;
+      background-size: cover;
+    }
+  }
 }
   
 .socials__item-link--vk {
