--- a/src/styles/blocks/content.less
+++ b/src/styles/blocks/content.less
@@ -2,7 +2,8 @@
   background: #fff;
   width: 100%;
   height: 100%;
-  padding-top: 150px;
+  padding: 150px 20px 120px;
+  overflow: auto;
   
   &__header-big, h1 {
     font-size: 36px;
@@ -24,8 +25,67 @@
     margin-bottom: 10px;
   }
   
-  &__table, table {
+  &__photos {
+    width: 450px;
+    margin: 0 auto;
+  }
+  
+  &__photos-main {
+    width: 100%;
+    height: 218px;
+  }
+  
+  &__photos-thumbnails {
+    display: flex;
+    margin-top: 10px;
+  }
+  
+  &__photos-thumbnails-item {
+    width: 71px;
+    height: 73px;
+    border: 1px solid #e7e7e7;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     
+    &:nth-child(n+2) {
+      margin-left: 10px;
+    }
+    
+    &--active {
+      border: 1px solid #c32417;
+    }
+  }
+  
+  &__photos-thumbnails-item-img {
+    height: 100%;
+    width: auto;
+  }
+  
+  &__table, table {
+    width: 100%;
+  }
+  
+  &__table-row, tr {
+    
+  }
+  
+  &__table-header, th {
+    text-align: center;
+    border: 1px solid #cbcbcb;
+    height: 40px;
+    vertical-align: middle;
+    font-family: @font-family-main;
+  }
+  
+  &__table-cell, td {
+    text-align: center;
+    height: 40px;
+    border: 1px solid #cbcbcb;
+    vertical-align: middle;
+    width: 25%;
+    color: #646464;
+    font-family: @font-family-main;
   }
   
   &__list, ul {
@@ -33,7 +93,22 @@
   }
   
   &__list-item, li {
+    font-family: @font-family-main;
+    font-size: 14px;
+    display: flex;
+    align-items: center;
+    line-height: 30px;
     
+    &:before {
+      content: '';
+      display: block;
+      width: 0;
+      height: 0;
+      border-style: solid;
+      border-width: 5px 0 5px 7px;
+      border-color: transparent transparent transparent #000000;
+      margin-right: 7px;
+    }
   }
   
   
