--- a/src/styles/blocks/header.less
+++ b/src/styles/blocks/header.less
@@ -2,11 +2,11 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  height: 72px;
   position: relative;
   position: absolute;
   left: 0;
   top: 0;
   width: 100%;
-  padding: 20px 15px;
   z-index: 5;
 }
