--- a/src/styles/blocks/logo.less
+++ b/src/styles/blocks/logo.less
@@ -17,4 +17,14 @@
     width: 136px;
     height: 34px;
   }
+  
+  &--black {
+    .logo__name {
+      color: #000;
+    }
+    .logo__img {
+      background: url(../img/logo-black.png) no-repeat;
+      background-size: cover;
+    }
+  }
 }
