--- a/src/styles/blocks/phone.less
+++ b/src/styles/blocks/phone.less
@@ -2,9 +2,13 @@
   color: #fff;
   font-family: @font-family-main;
   font-size: 16px;
-}
-
-.phone--modal {
-  display: inline-block;
-  margin-top: 29px;
+  
+  &--modal {
+    display: inline-block;
+    margin-top: 29px;
+  }
+  
+  &--black {
+    color: #000;
+  }
 }
