--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -23,3 +23,8 @@
 @import 'blocks/divided-page.less';
 @import 'blocks/content.less';
 @import 'blocks/page-half.less';
+@import 'blocks/trainer.less';
+@import 'blocks/map.less';
+@import 'blocks/contacts.less';
+@import 'blocks/error.less';
+@import 'blocks/gallery.less';
