--- a/src/styles/blocks/content.less
+++ b/src/styles/blocks/content.less
@@ -2,16 +2,16 @@
   background: #fff;
   width: 100%;
   height: 100%;
-  padding: 150px 20px 120px;
+  padding: 135px 20px 40px;
   overflow: auto;
   
-  &__header-big, h1 {
+  &__header-big, h2 {
     font-size: 36px;
     font-family: @font-family-main;
     margin-bottom: 20px;
   }
   
-  &__header-small, h2 {
+  &__header-small, h3 {
     font-size: 24px;
     line-height: 48px;
     font-family: @font-family-main;
@@ -53,7 +53,7 @@
     }
     
     &--active {
-      border: 1px solid #c32417;
+      border: 1px solid @color-main;
     }
   }
   
@@ -111,5 +111,32 @@
     }
   }
   
-  
+  &__link {
+    color: @color-main;
+    font-size: 14px;
+    font-family: @font-family-main;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    margin-top: 23px;
+    
+    &:before {
+      content: '';
+      display: block;
+      width: 0;
+      height: 0;
+      border-style: solid;
+      border-width: 5px 0 5px 7px;
+      border-color: transparent transparent transparent @color-main;
+      margin-right: 7px;
+    }
+    
+    &--arrowless {
+      text-decoration: underline;
+      
+      &:before {
+        display: none;
+      }
+    }
+  }  
 }
