--- a/src/pages/gallery.jade
+++ b/src/pages/gallery.jade
@@ -8,30 +8,30 @@ html(lang='en')
       +header
       ul.gallery
         li.gallery__item
-          a.gallery__item-link(href="#")
-            img.gallery__item-img(src="img/gallery-1.jpg", alt="Clients")
+          a.gallery__item-link(href="img/main-bg-1.jpg" rel="gallery")
+            img.gallery__item-img(src="http://placehold.it/390x390", alt="Clients")
         li.gallery__item
-          a.gallery__item-link(href="#")
-            img.gallery__item-img(src="img/gallery-2.jpg", alt="Clients")
+          a.gallery__item-link(href="img/main-bg-1.jpg" rel="gallery")
+            img.gallery__item-img(src="http://placehold.it/390x390", alt="Clients")
         li.gallery__item
-          a.gallery__item-link(href="#")
-            img.gallery__item-img(src="img/gallery-3.jpg", alt="Clients")
+          a.gallery__item-link(href="img/main-bg-1.jpg" rel="gallery")
+            img.gallery__item-img(src="http://placehold.it/390x390", alt="Clients")
         li.gallery__item
-          a.gallery__item-link(href="#")
-            img.gallery__item-img(src="img/gallery-4.jpg", alt="Clients")
+          a.gallery__item-link(href="img/main-bg-1.jpg" rel="gallery")
+            img.gallery__item-img(src="http://placehold.it/390x390", alt="Clients")
         li.gallery__item
-          a.gallery__item-link(href="#")
-            img.gallery__item-img(src="img/gallery-1.jpg", alt="Clients")
+          a.gallery__item-link(href="img/main-bg-1.jpg" rel="gallery")
+            img.gallery__item-img(src="http://placehold.it/390x390", alt="Clients")
         li.gallery__item
-          a.gallery__item-link(href="#")
-            img.gallery__item-img(src="img/gallery-2.jpg", alt="Clients")
+          a.gallery__item-link(href="img/main-bg-1.jpg" rel="gallery")
+            img.gallery__item-img(src="http://placehold.it/390x390", alt="Clients")
         li.gallery__item
-          a.gallery__item-link(href="#")
-            img.gallery__item-img(src="img/gallery-3.jpg", alt="Clients")
+          a.gallery__item-link(href="img/main-bg-1.jpg" rel="gallery")
+            img.gallery__item-img(src="http://placehold.it/390x390", alt="Clients")
         li.gallery__item
-          a.gallery__item-link(href="#")
-            img.gallery__item-img(src="img/gallery-4.jpg", alt="Clients")
+          a.gallery__item-link(href="img/main-bg-1.jpg" rel="gallery")
+            img.gallery__item-img(src="http://placehold.it/390x390", alt="Clients")
         li.gallery__item
-          a.gallery__item-link(href="#")
-            img.gallery__item-img(src="img/gallery-1.jpg", alt="Clients")
+          a.gallery__item-link(href="img/main-bg-1.jpg" rel="gallery")
+            img.gallery__item-img(src="http://placehold.it/390x390", alt="Clients")
       +footer
