--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -1,10 +1,16 @@
 @color-main: #c32417;
 
+@table-bg: #3e3e41;
+@table-bg-active: rgba(50, 50, 53, .5);
+@table-course-color: rgba(31, 31, 33, .5);
+
 
 @font-family-main: 'Roboto', 'Arial', sans-serif;
 
 
 @transition: all .2s linear;
+
+
 
 
 
