--- a/src/templates/mixins.jade
+++ b/src/templates/mixins.jade
@@ -14,7 +14,7 @@ mixin header(logoClass, menuClass)
           li.menu__item
             a(href="trainers.html").menu__item-link Тренеры
           li.menu__item
-            a(href="#").menu__item-link Расписание
+            a(href="calendar.html").menu__item-link Расписание
           li.menu__item
             a(href="gallery.html").menu__item-link Галерея
           li.menu__item
