--- a/src/styles/blocks/slider-main.less
+++ b/src/styles/blocks/slider-main.less
@@ -4,6 +4,7 @@
   top: 0;
   width: 100%;
   height: 100%;
+  background: url(http://placehold.it/1920x1080/000000) no-repeat center;
   
   &__item {
     width: 100%;
@@ -11,6 +12,18 @@
     
     &:focus {
       outline: 0;
+    }
+    
+    &:before {
+      content: '';
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background: #000;
+      opacity: .38;
+      display: block;
     }
     
     &--first {
