--- a/src/pages/courses.jade
+++ b/src/pages/courses.jade
@@ -4,17 +4,17 @@ html(lang='en')
   include ../templates/mixins.jade
   
   body
+    +header
     .wrapper
-      +header
       .divided-page
         .page-half
-          a.course.course--pilates(href="#")
+          a.course.course--pilates(href="pilates.html")
             .course__content
               h2.course__name Пилатес
               p.course__comment программы
         .page-half
-          a.course.course--functional(href="#")
+          a.course.course--functional(href="functional.html")
             .course__content
               h2.course__name Функциональный тренинг
               p.course__comment программы
-      +footer
+    +footer('footer--transparent')
