--- a/src/pages/functional.jade
+++ b/src/pages/functional.jade
@@ -20,4 +20,4 @@ html(lang='en')
             p.content__text Пилатес укрепляет мышцы пресса, улучшает баланс и координацию, а также снижает стресс. Упражнения пилатеса безопасны и подходят для широкого возрастного спектра[источник не указан 1758 дней]. Пилатесом можно заниматься как в фитнес-клубе, так и самостоятельно, дома.
             p.content__text Метод пилатеса делает упор на взаимодействие разума и тела при выполнении упражнений. Выполнение упражнений пилатеса сопровождается концентрацией на дыхательном ритме
             a.content__link(href="#") Посмотреть расписание занятий 
-      +footer('', 'socials--black')
+      +footer('footer--transparent', '', 'socials--black')
