--- a/src/pages/gallery.jade
+++ b/src/pages/gallery.jade
@@ -4,8 +4,8 @@ html(lang='en')
   include ../templates/mixins.jade
   
   body
+    +header
     .wrapper
-      +header
       ul.gallery
         li.gallery__item
           a.gallery__item-link(href="img/main-bg-1.jpg" rel="gallery")
@@ -34,4 +34,4 @@ html(lang='en')
         li.gallery__item
           a.gallery__item-link(href="img/main-bg-1.jpg" rel="gallery")
             img.gallery__item-img(src="http://placehold.it/390x390", alt="Clients")
-      +footer
+    +footer('footer--transparent')
