--- a/src/pages/trainers.jade
+++ b/src/pages/trainers.jade
@@ -4,8 +4,8 @@ html(lang='en')
   include ../templates/mixins.jade
   
   body
+    +header('', 'menu--black')
     .wrapper
-      +header('', 'menu--black')
       .divided-page
         .page-half
           .course.course--pilates
@@ -17,7 +17,8 @@ html(lang='en')
               h1.content__header-big Анастасия Фролова
               .trainer__content
                 .trainer__left
-                  img.trainer__photo(src="img/trainer-1.jpg", alt="Анастасия Фролова")
+                  //img.trainer__photo(src="img/trainer-1.jpg", alt="Анастасия Фролова")
+                  img.trainer__photo(src="http://placehold.it/200x200/000000", alt="Анастасия Фролова")
                   a.trainer__schedule.content__link(href="#") Посмотреть расписание
                 .trainer__text
                   p.content__text Система пилатес включает в себя упражнения для всех частей тела. Данная система упражнений была разработана в начале XX века, но получила наибольшее признание в начале XXI века.
@@ -27,10 +28,11 @@ html(lang='en')
               h1.content__header-big Андрей Иванов
               .trainer__content
                 .trainer__left
-                  img.trainer__photo(src="img/trainer-2.jpg", alt="Анастасия Фролова")
+                  //img.trainer__photo(src="img/trainer-2.jpg", alt="Анастасия Фролова")
+                  img.trainer__photo(src="http://placehold.it/200x200/000000", alt="Анастасия Фролова")
                   a.trainer__schedule.content__link(href="#") Посмотреть расписание
                 .trainer__text
                   p.content__text Система пилатес включает в себя упражнения для всех частей тела. Данная система упражнений была разработана в начале XX века, но получила наибольшее признание в начале XXI века.
                   p.content__text Система пилатес включает в себя упражнения для всех частей тела. Данная система упражнений была разработана в начале XX века, но получила наибольшее
                   p.content__text Была разработана в начале XX века, но получила наибольшее была разработана в начале XX века
-      +footer('', 'socials--black')
+    +footer('footer--transparent', '', 'socials--black')
