--- a/src/styles/blocks/calendar.less
+++ b/src/styles/blocks/calendar.less
@@ -1,5 +1,5 @@
 .calendar {
-  margin: 144px 14px 156px;
+  margin: 144px 14px 120px;
 //  background: url(../img/calendar-bg.png) no-repeat center 123px;
   
   &__top {
@@ -32,8 +32,7 @@
     
     &--trainer {
       appearance: none;
-      padding-left: 37px;
-      padding-right: 88px;
+      padding: 0 51px 0 37px;
       background: url(../img/arrow-white.png) no-repeat;
       background-size: 15px 11px;
       background-position: 218px 16px;
