--- a/src/styles/blocks/error.less
+++ b/src/styles/blocks/error.less
@@ -1,6 +1,8 @@
 .error {
   width: 100%;
-  height: 100%;
+  flex: 1;
+//  height: 100%;
+//  position: absolute;
   display: flex;
   justify-content: center;
   align-items: center;
