--- a/src/styles/blocks/footer.less
+++ b/src/styles/blocks/footer.less
@@ -3,10 +3,16 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position: absolute;
-  bottom: 0;
-  left: 0;
+  background: #000;
   padding: 0 15px 20px;
+  position: relative;
+  
+  &--transparent {
+    background: transparent;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+  }
     
   @media screen and (max-width: @screen-sm) {
     padding-bottom: 15px;
