--- a/src/styles/global/global-scaffolding.less
+++ b/src/styles/global/global-scaffolding.less
@@ -1,13 +1,17 @@
 html {
-  height: 100%;
+//  height: 100%;
 }
 
 body {
-  height: 100%;
-  background: #000;
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+  position: relative;
 }
 
 .wrapper {
-  height: 100%;
-  overflow: auto;
+  flex: 1;
+  background: #000;
+  display: flex;
+  flex-direction: column;
 }
