add calendar modal

--- a/src/pages/calendar.jade
+++ b/src/pages/calendar.jade
@@ -22,177 +22,178 @@ html(lang='en')
         .calendar__content
           .calendar__column
             .calendar__header-item.calendar__header-item--icon
-            a.calendar__time(href="#") 07:00
-            a.calendar__time(href="#") 08:00
-            a.calendar__time(href="#") 09:00
-            a.calendar__time(href="#") 10:00
-            a.calendar__time(href="#") 11:00
-            a.calendar__time(href="#") 12:00
-            a.calendar__time(href="#") 13:00
-            a.calendar__time(href="#") 14:00
-            a.calendar__time(href="#") 15:00
-            a.calendar__time(href="#") 16:00
-            a.calendar__time(href="#") 17:00
-            a.calendar__time(href="#") 18:00
-            a.calendar__time(href="#") 19:00
-            a.calendar__time(href="#") 20:00
-            a.calendar__time(href="#") 21:00
+            .calendar__time 07:00
+            .calendar__time 08:00
+            .calendar__time 09:00
+            .calendar__time 10:00
+            .calendar__time 11:00
+            .calendar__time 12:00
+            .calendar__time 13:00
+            .calendar__time 14:00
+            .calendar__time 15:00
+            .calendar__time 16:00
+            .calendar__time 17:00
+            .calendar__time 18:00
+            .calendar__time 19:00
+            .calendar__time 20:00
+            .calendar__time 21:00
           .calendar__column
             .calendar__header-item Пн. 15
-            a.calendar__course.calendar__course--full(href="#")
+            a.calendar__course.calendar__course--full(href="#modal", data-entry)
               p.calendar__course-name Пилатес
               p.calendar__course-trainer Елена Смолина
               p.calendar__course-name Кол-во мест: 2
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course.calendar__course--full(href="#")
+            .calendar__course
+            .calendar__course
+            .calendar__course
+            .calendar__course
+            .calendar__course
+            .calendar__course
+            .calendar__course
+            .calendar__course
+            .calendar__course
+            a.calendar__course.calendar__course--full(href="#modal", data-entry)
               p.calendar__course-name Пилатес
               p.calendar__course-trainer Елена Смолина
               p.calendar__course-name Кол-во мест: 2
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
+            .calendar__course
+            .calendar__course
+            .calendar__course
+            .calendar__course
           .calendar__column
             .calendar__header-item.calendar__header-item--active Вт. 16
-            a.calendar__course(href="#")
-            a.calendar__course.calendar__course--full.calendar__course--active(href="#")
+            .calendar__course
+            a.calendar__course.calendar__course--full(href="#modal", data-entry)
               p.calendar__course-name Функциональный тренинг
               p.calendar__course-trainer Андрей Смольный
               p.calendar__course-name Кол-во мест: 0
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course.calendar__course--full(href="#")
+            .calendar__course
+            .calendar__course
+            .calendar__course
+            .calendar__course
+            .calendar__course
+            .calendar__course
+            .calendar__course
+            .calendar__course
+            .calendar__course
+            a.calendar__course.calendar__course--full(href="#modal", data-entry)
               p.calendar__course-name Функциональный тренинг
               p.calendar__course-trainer Андрей Смольный
               p.calendar__course-name Кол-во мест: 0
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
+            .calendar__course
+            .calendar__course
+            .calendar__course
           .calendar__column
             .calendar__header-item Ср. 17
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course.calendar__course--full(href="#")
+            .calendar__course
+            .calendar__course
+            .calendar__course
+            a.calendar__course.calendar__course--full(href="#modal", data-entry)
               p.calendar__course-name Пилатес
               p.calendar__course-trainer Елена Смолина
               p.calendar__course-name Кол-во мест: 2
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course.calendar__course--full(href="#")
+            .calendar__course
+            .calendar__course
+            a.calendar__course.calendar__course--full(href="#modal", data-entry)
               p.calendar__course-name Пилатес
               p.calendar__course-trainer Елена Смолина
               p.calendar__course-name Кол-во мест: 2
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course.calendar__course--full(href="#")
+            .calendar__course
+            .calendar__course
+            .calendar__course
+            a.calendar__course.calendar__course--full(href="#modal", data-entry)
               p.calendar__course-name Функциональный тренинг
               p.calendar__course-trainer Андрей Смольный
               p.calendar__course-name Кол-во мест: 0
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course.calendar__course--full(href="#")
+            .calendar__course
+            .calendar__course
+            a.calendar__course.calendar__course--full(href="#modal", data-entry)
               p.calendar__course-name Пилатес
               p.calendar__course-trainer Елена Смолина
               p.calendar__course-name Кол-во мест: 2
-            a.calendar__course(href="#")
+            .calendar__course
           .calendar__column
             .calendar__header-item Чт. 18
-            a.calendar__course.calendar__course--full(href="#")
+            a.calendar__course.calendar__course--full(href="#modal", data-entry)
               p.calendar__course-name Функциональный тренинг
               p.calendar__course-trainer Андрей Смольный
               p.calendar__course-name Кол-во мест: 0
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course.calendar__course--full(href="#")
+            .calendar__course
+            .calendar__course
+            .calendar__course
+            .calendar__course
+            .calendar__course
+            .calendar__course
+            a.calendar__course.calendar__course--full(href="#modal", data-entry)
               p.calendar__course-name Функциональный тренинг
               p.calendar__course-trainer Андрей Смольный
               p.calendar__course-name Кол-во мест: 0
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
+            .calendar__course
+            .calendar__course
+            .calendar__course
+            .calendar__course
+            .calendar__course
+            .calendar__course
+            .calendar__course
           .calendar__column
             .calendar__header-item Пт. 19
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course.calendar__course--full(href="#")
+            .calendar__course
+            .calendar__course
+            .calendar__course
+            .calendar__course
+            .calendar__course
+            .calendar__course
+            .calendar__course
+            .calendar__course
+            a.calendar__course.calendar__course--full(href="#modal", data-entry)
               p.calendar__course-name Пилатес
               p.calendar__course-trainer Елена Смолина
               p.calendar__course-name Кол-во мест: 2
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course.calendar__course--full(href="#")
+            .calendar__course
+            .calendar__course
+            .calendar__course
+            .calendar__course
+            .calendar__course
+            a.calendar__course.calendar__course--full(href="#modal", data-entry)
               p.calendar__course-name Пилатес
               p.calendar__course-trainer Елена Смолина
               p.calendar__course-name Кол-во мест: 2
           .calendar__column
             .calendar__header-item Сб. 20
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course.calendar__course--full(href="#")
+            .calendar__course
+            .calendar__course
+            .calendar__course
+            .calendar__course
+            .calendar__course
+            a.calendar__course.calendar__course--full(href="#modal", data-entry)
               p.calendar__course-name Пилатес
               p.calendar__course-trainer Елена Смолина
               p.calendar__course-name Кол-во мест: 2
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
+            .calendar__course
+            .calendar__course
+            .calendar__course
+            .calendar__course
+            .calendar__course
+            .calendar__course
+            .calendar__course
+            .calendar__course
+            .calendar__course
           .calendar__column
             .calendar__header-item Вс. 21
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
-            a.calendar__course(href="#")
+            .calendar__course
+            .calendar__course
+            .calendar__course
+            .calendar__course
+            .calendar__course
+            .calendar__course
+            .calendar__course
+            .calendar__course
+            .calendar__course
+            .calendar__course
+            .calendar__course
+            .calendar__course
+            .calendar__course
+            .calendar__course
+            .calendar__course
     +footer
+    +modal
