--- a/src/pages/gallery.jade
+++ b/src/pages/gallery.jade
@@ -8,30 +8,30 @@ html(lang='en')
     .wrapper
       ul.gallery
         li.gallery__item
-          a.gallery__item-link(href="img/main-bg-1.jpg" rel="gallery")
+          a.gallery__item-link(href="img/main-bg-1.jpg" rel="gallery" data-gallery)
             img.gallery__item-img(src="http://placehold.it/390x390", alt="Clients")
         li.gallery__item
-          a.gallery__item-link(href="img/main-bg-1.jpg" rel="gallery")
+          a.gallery__item-link(href="img/main-bg-1.jpg" rel="gallery" data-gallery)
             img.gallery__item-img(src="http://placehold.it/390x390", alt="Clients")
         li.gallery__item
-          a.gallery__item-link(href="img/main-bg-1.jpg" rel="gallery")
+          a.gallery__item-link(href="img/main-bg-1.jpg" rel="gallery" data-gallery)
             img.gallery__item-img(src="http://placehold.it/390x390", alt="Clients")
         li.gallery__item
-          a.gallery__item-link(href="img/main-bg-1.jpg" rel="gallery")
+          a.gallery__item-link(href="img/main-bg-1.jpg" rel="gallery" data-gallery)
             img.gallery__item-img(src="http://placehold.it/390x390", alt="Clients")
         li.gallery__item
-          a.gallery__item-link(href="img/main-bg-1.jpg" rel="gallery")
+          a.gallery__item-link(href="img/main-bg-1.jpg" rel="gallery" data-gallery)
             img.gallery__item-img(src="http://placehold.it/390x390", alt="Clients")
         li.gallery__item
-          a.gallery__item-link(href="img/main-bg-1.jpg" rel="gallery")
+          a.gallery__item-link(href="img/main-bg-1.jpg" rel="gallery" data-gallery)
             img.gallery__item-img(src="http://placehold.it/390x390", alt="Clients")
         li.gallery__item
-          a.gallery__item-link(href="img/main-bg-1.jpg" rel="gallery")
+          a.gallery__item-link(href="img/main-bg-1.jpg" rel="gallery" data-gallery)
             img.gallery__item-img(src="http://placehold.it/390x390", alt="Clients")
         li.gallery__item
-          a.gallery__item-link(href="img/main-bg-1.jpg" rel="gallery")
+          a.gallery__item-link(href="img/main-bg-1.jpg" rel="gallery" data-gallery)
             img.gallery__item-img(src="http://placehold.it/390x390", alt="Clients")
         li.gallery__item
-          a.gallery__item-link(href="img/main-bg-1.jpg" rel="gallery")
+          a.gallery__item-link(href="img/main-bg-1.jpg" rel="gallery" data-gallery)
             img.gallery__item-img(src="http://placehold.it/390x390", alt="Clients")
     +footer('footer--transparent')
