--- a/src/pages/pilates.jade
+++ b/src/pages/pilates.jade
@@ -19,7 +19,8 @@ html(lang='en')
             .content__item
               h3.content__header-small Тренажеры
               .content__photos
-                img.content__photos-main(src="img/pilates-2-big.jpg", alt="Pilates")
+                //img.content__photos-main(src="img/pilates-2-big.jpg", alt="Pilates")
+                img.content__photos-main(src="http://placehold.it/450x218/000000", alt="Pilates")
                 .content__photos-thumbnails
                   a.content__photos-thumbnails-item(href="#")
                     img.content__photos-thumbnails-item-img(src="img/pilates-1-small.jpg", alt="Pilates")
