--- a/src/styles/blocks/btn.less
+++ b/src/styles/blocks/btn.less
@@ -5,9 +5,11 @@
   border-radius: 4px;
   text-decoration: none;
   position: relative;
+  color: #000;
+  cursor: pointer;
   
   &__content {
-    color: #fff;
+    color: inherit;
     font-family: @font-family-main;
     font-size: 18px;
     text-transform: uppercase;
@@ -33,7 +35,7 @@
     border-color: @color-main;
     
     .btn__content {
-      color: #000;
+      color: #fff;
     }
     
     &:after {
