--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -3,7 +3,7 @@
 @import 'mixins.less';
 
 @import 'plugins/jquery.fancybox.less';
-@import 'plugins/plugins-overwrite.less';
+@import 'plugins/plugins-rewrite.less';
 
 @import 'global/global-fonts.less';
 @import 'global/global-scaffolding.less';
@@ -28,3 +28,7 @@
 @import 'blocks/error.less';
 @import 'blocks/gallery.less';
 @import 'blocks/calendar.less';
+@import 'blocks/modal.less';
+@import 'blocks/tabs.less';
+@import 'blocks/entry-form.less';
+@import 'blocks/input.less';
